<resources>
    <string name="app_name">광문산업관리자</string>
    <string name="list_trans">운송 내역</string>
    <string name="statistic">통계</string>
    <string name="dispatch">배차</string>
    <string name="request_regist">등록 요청</string>
    <string name="data">데이터</string>
    <string name="vihicle_profile">차량 정보</string>
    <string name="start">출발지</string>
    <string name="end">도착지</string>
    <string name="product">제품</string>
    <string name="vihicle_number">차량 번호</string>
    <string name="quantity">수량</string>
    <string name="hint_quantity">수량 입력</string>
    <string name="agent">대리점</string>
    <string name="name">이름</string>
    <string name="add_data">데이터 추가</string>
    <string name="categorie">카테고리</string>
    <string name="input_data">데이터 입력</string>
    <string name="phonenumber">전화번호</string>
    <string name="request_dispatch">배차 요청</string>
    <string name="dispatch_list">최근 배차 내역</string>
    <string name="Price">단가</string>
    <string name="edit_price">단가 수정</string>
</resources>